--- a/views/home.html
+++ b/views/home.html
@@ -3,21 +3,60 @@
 <!--[if lt IE 7]> <html class="lt-ie9 lt-ie8 lt-ie7" lang="en-US"> <![endif]-->
 <!--[if IE 7]>    <html class="lt-ie9 lt-ie8" lang="en-US"> <![endif]-->
 <!--[if IE 8]>    <html class="lt-ie9" lang="en-US"> <![endif]-->
+<!--[if lt IE 9]> <script src="/skin/ecms163/js/html5shiv.min.js"></script> 
+<script src="/skin/ecms163/js/respond.min.js"></script> <![endif]-->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Cache-Control" content="no-transform" />
+    <meta http-equiv="Cache-Control" content="no-siteapp" />
+    <meta name="applicable-device" content="pc,mobile">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="keywords" content="JcShare" />
+    <meta name="description" content="JcShare " />
     <title>JcShare</title>
-
     <!-- Style Sheet-->
-    <link rel="stylesheet" id='bootstrap-css-css' href="../static/css/bootstrap5152.css?ver=1.0" type="text/css" media="all" />
-    <link rel="stylesheet" id='responsive-css-css' href="../static/css/responsive5152.css?ver=1.0" type="text/css" media="all" />
-    <link rel="stylesheet" id="pretty-photo-css-css" href="../static/js/prettyphoto/prettyPhotoaeb9.css?3.1.4" type="text/css" media="all" />
-
-    <link rel="stylesheet" id="main-css-css" href='../static/css/main5152.css?ver=1.0' type='text/css' media='all' />
-    <link rel='stylesheet' id='custom-css-css' href='../static/css/custom5152.html?ver=1.0' type='text/css' media='all' />
+    <script type='text/javascript' src='/static/js/jquery.js?ver=1.12.4'></script>
+    <script type='text/javascript' src='/static/js/jquery-migrate.min.js?ver=1.4.1'></script>
+    <script type='text/javascript' src='/static/js/owl.carousel.js?ver=1.0.0'></script>
+    <script type='text/javascript' src='/static/js/jquery.fancybox.js?ver=1.0.0'></script>
 
 </head>
-<body>
+<body class="home" cz-shortcut-listen="true" style>
+    <header id="header">
+        <div class="top-header">
+          <div class="container">
+            <div class="pull-left">自定义链接或者文字</div>
+            <div class="pull-right hidden-xs"> <a href="#"><i class="fa fa-shopping-cart" aria-hidden="true"></i>自定义链接</a> <a href="#"><i class="fa fa-sitemap" aria-hidden="true"></i>自定义链接</a></div>
+          </div>
+        </div>
+        <div class="btm-header mt20 mb20">
+          <div class="container">
+            <div class="header-logo">
+              <h1>我的网站</h1>
+              <a title="我的网站" class="logo-url pull-right" href="/"> <img src="/skin/ecms163/images/logo.png" alt="我的网站"  title="我的网站"/> </a>
+              <div class="slogen hidden-xs">
+                <h2>LOGO右边文字</h2>
+                <p>LOGO右边文字LOGO右边文字</p>
+              </div>
+            </div>
+            <div class="header-phone hidden-xs">
+              <p><i class="fa fa-mobile-phone" aria-hidden="true"></i>0531-88888888<br>
+                <i class="fa fa-phone" aria-hidden="true"></i>13888888888</p>
+            </div>
+            <div class="button visible-xs-block">
+              <div class="menu-toggle"> <span></span></div>
+            </div>
+          </div>
+        </div>
+        <div class="header-menu">
+          <ul id="menu" class="header-menu-con  container">
+            <li class="current-menu-item"><a href="/">首页</a></li>
+            <li class="menu-item "><a href="/products/">产品中心</a><ul class="sub-menu"><li class="menu-item"><a href="/products/test/">测试二级</a></li><li class="menu-item"><a href="/products/phone/">智能手机</a></li><li class="menu-item"><a href="/products/notebook/">笔记本</a></li><li class="menu-item"><a href="/products/test2/">测试栏目</a></li><li class="menu-item"><a href="/products/test3/">测试二级</a></li><li class="menu-item"><a href="/products/test4/">测试栏目</a></li><li class="menu-item"><a href="/products/test5/">测试栏目</a></li></ul></li><li class="menu-item "><a href="/news/">新闻动态</a><ul class="sub-menu"><li class="menu-item"><a href="/news/gongsi/">公司动态</a></li><li class="menu-item"><a href="/news/hangye/">行业动态</a></li></ul></li><li class="menu-item "><a href="/shocases/">案例展示</a><ul class="sub-menu"><li class="menu-item"><a href="/shocases/vis/">品牌设计</a></li><li class="menu-item"><a href="/shocases/sis/">商业空间</a></li><li class="menu-item"><a href="/shocases/ais/">画册设计</a></li><li class="menu-item"><a href="/shocases/add/">广告设计</a></li></ul></li><li class="menu-item "><a href="/contact/">联系我们</a><ul class="sub-menu"></ul></li><li class="menu-item "><a href="/about/">关于我们</a><ul class="sub-menu"></ul></li><li class="menu-item "><a href="/service/">我们的服务</a><ul class="sub-menu"></ul></li>    </ul>
+        </div>
+    </header>
+
+
 
 </body>
 </html>
