--- a/views/home.html
+++ b/views/home.html
@@ -48,30 +48,36 @@
         </div>
         <div class="header-menu">
             <ul id="menu" class="header-menu-con  container">
-                <li class="current-menu-item"><a href="/">首页</a></li>
-                <li class="menu-item ">
-                    <a href="/products/">产品中心</a>
+                <li class="menu-item"><a href="/">首页</a></li>
+                <li class="menu-item">
+                    <a href="/products/">地区</a>
                     <ul class="sub-menu">
                         <li class="menu-item">
-                            <a href="/products/test/">测试二级</a>
+                            <a href="/Eastern/">华东地区</a>
                         </li>
                         <li class="menu-item">
-                            <a href="/products/phone/">智能手机</a>
+                            <a href="/South/">华南地区</a>
                         </li>
                         <li class="menu-item">
-                            <a href="/products/notebook/">笔记本</a>
+                            <a href="/products/notebook/">华中地区</a>
                         </li>
                         <li class="menu-item">
-                        <a href="/products/test2/">测试栏目</a>
+                        <a href="/products/test2/">华北地区</a>
                         </li>
                         <li class="menu-item">
-                            <a href="/products/test3/">测试二级</a>
+                            <a href="/products/test3/">西北地区</a>
                         </li>
                         <li class="menu-item">
-                            <a href="/products/test4/">测试栏目</a>
+                            <a href="/products/test4/">西南地区</a>
                         </li>
                         <li class="menu-item">
-                            <a href="/products/test5/">测试栏目</a>
+                            <a href="/products/test5/">东北地区</a>
+                        </li>
+                        <li class="menu-item">
+                            <a href="/products/test5/">台港澳地区</a>
+                        </li>
+                        <li class="menu-item">
+                            <a href="/products/test5/">海外地区</a>
                         </li>
                     </ul>
                 </li>
